# ServLauncher

./: README.md  build_local.py  pyproject.toml
.github/scripts/: freeze_versions.py
.github/workflows/: build.yml  deploy.yml
website/: astro.config.mjs
website/src/layouts/: Layout.astro
website/src/pages/: index.astro
