[project]
name = "astra-launcher"
version = "0.1.0"
description = "Astra launcher: easy and light server manager for minecraft."
authors = [{ name = "kotop21", github = "github.com/kotop21" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["core", "desktop"]

[tool.uv.sources]
core = { workspace = true }
desktop = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.basedpyright]
typeCheckingMode = "basic"
extraPaths = ["packages/core/src", "packages/desktop/src"]
venvPath = "."
venv = ".venv"

reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportUnusedExpression = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = ["pre-commit>=4.6.0", "ruff>=0.15.15"]
